fixed padding and spacing issue

--- a/main.css
+++ b/main.css
@@ -348,7 +348,7 @@ div.widthlimit {
 }
 
 hr.spacer {
-    margin: 25px;
+    margin: 50px;
 }
 
 div.widthlimit * {
